# SimpleAsioApp

./: CMakeLists.txt
Client/: CMakeLists.txt  main.cpp
Server/: CMakeLists.txt  main.cpp
StructConfigs/: CMakeLists.txt  TcpQueue.hpp  client_interface.hpp  client_libs.hpp  connection.hpp  headers.hpp  message.hpp  server_interface.hpp  server_libs.hpp
